adding django app

--- a/myapp/core/templates/core/login.html
+++ b/myapp/core/templates/core/login.html
@@ -1,3 +1,12 @@
+
+{% if request.user.is_authenticated %}
+<script>
+    window.location.href = "{% url 'home' %}"; 
+</script>
+{% else %}
+
+
+
 {%load static%}
 <!DOCTYPE html>
 <html lang="en">
@@ -69,3 +78,5 @@
         <script src="js/scripts.js"></script>
     </body>
 </html>
+  <!-- Your login form goes here -->
+  {% endif %}
