--- a/myapp/core/templates/core/register.html
+++ b/myapp/core/templates/core/register.html
@@ -34,7 +34,7 @@
                                                 <div class="form-floating mb-3">
                                                     <div class="form-floating mb-3 mb-md-0">
                                                         <input class="form-control" id="inputFirstName" type="text" placeholder="Enter your first name" name="username"/>
-                                                        <label for="inputFirstName">First name</label>
+                                                        <label for="inputFirstName">username</label>
                                                     </div>
                                                 </div>
 
