--- a/myapp/core/templates/core/login.html
+++ b/myapp/core/templates/core/login.html
@@ -45,13 +45,13 @@
                                                 <label class="form-check-label" for="inputRememberPassword">Remember Password</label>
                                             </div>
                                             <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                                                <a class="small" href="password.html">Forgot Password?</a>
+                                                <a class="small" href="#">Forgot Password?</a>
                                                 <button class="btn btn-primary" type="submit">Login</button>
                                             </div>
                                         </form>
                                     </div>
                                     <div class="card-footer text-center py-3">
-                                        <div class="small"><a href="register.html">Need an account? Sign up!</a></div>
+                                        <div class="small"><a href="{% url 'register' %}">Need an account? Sign up!</a></div>
                                     </div>
                                 </div>
                             </div>
