--- a/myapp/core/templates/core/login.html
+++ b/myapp/core/templates/core/login.html
@@ -1,4 +1,3 @@
-
 {% if request.user.is_authenticated %}
 <script>
     window.location.href = "{% url 'home' %}"; 
@@ -16,48 +15,39 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Login - SB Admin</title>
+        <title>Login ;D - SB Admin</title>
         <link href="{%static 'styles.css'%}" rel="stylesheet" />
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+        <!-- favicon to put a small image  --> 
+        <link rel="icon" type="image/x-icon" href="Genshin pics/icon.png">
+        <link rel="stylesheet" href="{%static 'oops.css'%}" />
     </head>
     <body class="bg-primary">
         <div id="layoutAuthentication">
             <div id="layoutAuthentication_content">
-                <main>
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-5">
-                                <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
-                                    <div class="card-body">
-                                        <form method="post" action=".">
-                                            {%csrf_token%}
-                                            <div class="form-floating mb-3">
-                                                <input class="form-control" id="inputEmail" type="text" placeholder="username" name="username"/>
-                                                <label for="inputEmail">username</label>
-                                            </div>
-                                            <div class="form-floating mb-3">
-                                                <input class="form-control" id="inputPassword" type="password" placeholder="Password" name="password"/>
-                                                <label for="inputPassword">Password</label>
-                                            </div>
-                                            <div class="form-check mb-3">
-                                                <input class="form-check-input" id="inputRememberPassword" type="checkbox" value="" />
-                                                <label class="form-check-label" for="inputRememberPassword">Remember Password</label>
-                                            </div>
-                                            <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                                                <a class="small" href="#">Forgot Password?</a>
-                                                <button class="btn btn-primary" type="submit">Login</button>
-                                            </div>
-                                        </form>
-                                    </div>
-                                    <div class="card-footer text-center py-3">
-                                        <div class="small"><a href="{% url 'register' %}">Need an account? Sign up!</a></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </main>
+                <div class="center">
+                    <h1>Login</h1>
+                    <form method="post">
+                        {%csrf_token%}
+                      <div class="txt_field">
+                        <input type="text" id="inputEmail" name="username" required />
+                        <span></span>
+                        <label>Username</label>
+                      </div>
+                      <div class="txt_field">
+                        <input type="password" id="inputPassword" name="password" required />
+                        <span></span>
+                        <label>Password</label>
+                      </div>
+                      <!--<div class="form-check mb-3">
+                        <input type="checkbox" value="" id="inputRememberPassword" class="form-check-input">
+                        <label for="inputRememberPassword" class="form-check-input ">Remember Password :)</label>
+                      </div>   -->
+                      <div class="pass ">Forgot Password?  :)</div>
+                      <input type="submit" value="Login" />
+                      <div class="signup_link">Not a member? <a href="#">Signup</a></div>
+                    </form>
+                </div>
             </div>
             <div id="layoutAuthentication_footer">
                 <footer class="py-4 bg-light mt-auto">
