--- a/myapp/core/templates/core/register.html
+++ b/myapp/core/templates/core/register.html
@@ -60,7 +60,7 @@
                                         </form>
                                     </div>
                                     <div class="card-footer text-center py-3">
-                                        <div class="small"><a href="login.html">Have an account? Go to login</a></div>
+                                        <div class="small"><a href="{%url 'login'%}">Have an account? Go to login</a></div>
                                     </div>
                                 </div>
                             </div>
