--- a/myapp/core/static/styles.css
+++ b/myapp/core/static/styles.css
@@ -11241,3 +11241,12 @@ body {
   font-size: 0.75rem;
   border-radius: 0.375rem !important;
 }
+
+div.masthead {
+  position: relative;
+  background-color: #343a40;
+  background: url("/background.jpeg") no-repeat center center;
+  background-size: cover;
+  padding-top: 8rem;
+  padding-bottom: 8rem;
+}
