--- a/myapp/core/static/styles.css
+++ b/myapp/core/static/styles.css
@@ -11245,7 +11245,7 @@ body {
 div.masthead {
   position: relative;
   background-color: #343a40;
-  background: url("/background.jpeg") no-repeat center center;
+  background:  url('{ STATIC_URL }core/background.jpeg') no-repeat center center;
   background-size: cover;
   padding-top: 8rem;
   padding-bottom: 8rem;
