enhancment of gui and validation

--- a/myapp/core/templates/core/index.html
+++ b/myapp/core/templates/core/index.html
@@ -1,5 +1,9 @@
 {% extends "core/base.html" %}
+
+{%block title%}Dashboard{%endblock%}
+
 {%block content%}
+{%load static%}
     <body class="sb-nav-fixed">
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
             <!-- Navbar Brand-->
@@ -89,16 +93,36 @@
                             <li class="breadcrumb-item active">Dashboard</li>
                         </ol>
                         <div class="row">
-                            <div class="col-xl-3 col-md-6">
-                                <div class="card bg-primary text-white mb-4">
-                                    <div class="card-body">Netowrk scan</div>
+                            <div class="col-xl-2 col-md-2">
+                                <div class="card bg-light text-black mb-4">
+                                    <img class="card-img-top" src="{%static 'network.png'%}" alt="Card image cap">
+                                    <div class="card-body">Netowrk Scan</div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
-                                        <a class="small text-white stretched-link" href="{%url 'scan'%}">New scan</a>
-                                        <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                                        <a class="small text-black stretched-link" href="{%url 'scan'%}">New scan</a>
+                                        <div class="small text-black"><i class="fas fa-angle-right"></i></div>
                                     </div>
                                 </div>
                             </div>
-                            
+                            <div class="col-xl-2 col-md-2">
+                                <div class="card bg-light text-black mb-4">
+                                    <img class="card-img-top" src="{%static 'web.png'%}" alt="Card image cap">
+                                    <div class="card-body">Web Application Scan</div>
+                                    <div class="card-footer d-flex align-items-center justify-content-between">
+                                        <a class="small text-black stretched-link" href="{%url 'scan'%}">New scan</a>
+                                        <div class="small text-black"><i class="fas fa-angle-right"></i></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-2 col-md-2">
+                                <div class="card bg-light text-black mb-4">
+                                    <img class="card-img-top" src="{%static 'malware.png'%}" alt="Card image cap">
+                                    <div class="card-body">Ransomware (MS17-010) Scan</div>
+                                    <div class="card-footer d-flex align-items-center justify-content-between">
+                                        <a class="small text-black stretched-link" href="{%url 'scan'%}">New scan</a>
+                                        <div class="small text-black"><i class="fas fa-angle-right"></i></div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         
    
