--- a/myapp/core/templates/core/networkscan.html
+++ b/myapp/core/templates/core/networkscan.html
@@ -1,8 +1,7 @@
 
 {%extends 'core/base.html'%}
-<!DOCTYPE html>
-<html lang="en">
 
+{%block title%}Network Scan{%endblock%}
 
 {%block content%}
 <body class="sb-nav-fixed">
