--- a/myapp/core/templates/core/base.html
+++ b/myapp/core/templates/core/base.html
@@ -7,10 +7,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Dashboard - SB Admin</title>
+        <title>NetPackt | {%block title%}{%endblock%}</title>
         
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
         <link href="{%static 'styles.css'%}" rel="stylesheet" />
+        {%block headattrs%} {%endblock%}
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     </head>
 
