--- a/myapp/core/static/oops.css
+++ b/myapp/core/static/oops.css
@@ -121,10 +121,13 @@ form .txt_field {
 .pass:hover {
   text-decoration: underline;
 }
+.pass a{
+  text-decoration: none;
+}
 input[type="submit"] {
   width: 100%;
   height: 50px;
-  background: #2691d9;
+  background-color: #2691d9;
   border-radius: 25px;
   font-size: 18px;
   color: #e9f4fb;
@@ -135,7 +138,7 @@ input[type="submit"] {
   border: none;
 }
 input[type="submit"]:hover {
-  border-color: #2691d9;
+  background-color: #115785;
 }
 .signup_link {
   margin: 30px 0;
@@ -149,4 +152,13 @@ input[type="submit"]:hover {
 }
 .signup_link a:hover {
   text-decoration: underline;
+}
+.pass-reset-p{
+  text-align: center;
+  font-size: 24px;
+  color: #666666;
+  padding: 30px;
+}
+.pass-reset-p a{
+  text-decoration: none;
 }
