--- a/template/startbootstrap-sb-admin-gh-pages/core/tables.html
+++ b/template/startbootstrap-sb-admin-gh-pages/core/tables.html
@@ -627,8 +627,8 @@
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="js/scripts.js"></script>
+        <!-- <script src="js/scripts.js"></script> -->
         <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
-        <script src="js/datatables-simple-demo.js"></script>
+        <!-- <script src="js/datatables-simple-demo.js"></script> -->
     </body>
 </html>
