--- a/myapp/core/templates/core/dashboard.html
+++ b/myapp/core/templates/core/dashboard.html
@@ -1,13 +1,11 @@
 {% extends "core/base.html" %}
-
 {%block title%}Dashboard{%endblock%}
-
 {%block content%}
 {%load static%}
     <body class="sb-nav-fixed">
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
             <!-- Navbar Brand-->
-            <a class="navbar-brand ps-3" href="index.html">NetPackt</a>
+            <a class="navbar-brand ps-3" href="{%url 'home'%}">NetPackt</a>
             <!-- Sidebar Toggle-->
             <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
             <!-- Navbar Search-->
